Enhance UX with date localization, platform detection, and improved layouts
Signed-off-by: Pablo Romano <pabloezeromano@gmail.com>

--- a/src/lib/translations/dictionary.json
+++ b/src/lib/translations/dictionary.json
@@ -69,6 +69,10 @@
       "subtitle": "Browse reports of suspicious activity submitted by the community",
       "loading": "Loading reports...",
       "noResults": "No reports found matching your criteria.",
+      "noReports": "No reports yet",
+      "noResultsDesc": "Try adjusting your search criteria or filters.",
+      "noReportsDesc": "Be the first to submit a report and help protect the community.",
+      "submitFirst": "Submit First Report",
       "untitled": "Untitled",
       "platform": "Platform",
       "unknown": "Unknown",
@@ -266,6 +270,10 @@
       "subtitle": "Explora reportes de actividades sospechosas enviados por la comunidad",
       "loading": "Cargando reportes...",
       "noResults": "No se encontraron reportes que coincidan con tus criterios.",
+      "noReports": "Aún no hay reportes",
+      "noResultsDesc": "Intenta ajustar tus criterios de búsqueda o filtros.",
+      "noReportsDesc": "Sé el primero en enviar un reporte y ayuda a proteger a la comunidad.",
+      "submitFirst": "Enviar Primer Reporte",
       "untitled": "Sin título",
       "platform": "Plataforma",
       "unknown": "Desconocida",
