Why mess with working types, OMG
Signed-off-by: Pablo Romano <pabloezeromano@gmail.com>

--- a/src/lib/translations/dictionary.json
+++ b/src/lib/translations/dictionary.json
@@ -513,6 +513,7 @@
       },
       "common": {
         "errorAnalysing": "Error al analizar",
+        "errorAnalysingDesc": "Ocurrió un error al analizar el contenido. Por favor, intenta nuevamente.",
         "reportSubmitted": "Reporte enviado exitosamente!",
         "errorSubmitting": "Error al enviar reporte"
       },
