Implement flexible report form validation for chat vs repo analysis
Signed-off-by: Pablo Romano <pabloezeromano@gmail.com>

--- a/src/lib/translations/dictionary.json
+++ b/src/lib/translations/dictionary.json
@@ -128,9 +128,12 @@
       "validation": {
         "typeRequired": "Type is required",
         "urlRequired": "URL is required",
+        "urlRequiredForChat": "URL is required for chat analysis",
         "urlInvalid": "Please enter a valid URL",
+        "titleOrUrlRequired": "Either title or URL is required",
+        "titleRequiredForChat": "Title is required for chat analysis",
         "reasonRequired": "Reason is required",
-        "contactRequired": "Either email or LinkedIn URL is required",
+        "contactRequired": "Please provide either email or LinkedIn",
         "submissionFailed": "Submission failed. Please try again."
       },
       "success": {
@@ -150,9 +153,10 @@
         "title": "Chat Analysis",
         "subtitle": "Analyse chat conversations, messages, or text content for suspicious patterns",
         "input": "Input",
-        "screenshots": "Screenshots (optional)",
+        "screenshots": "Screenshots",
         "chatText": "Chat text",
         "chatTextPlaceholder": "Paste here the chat text or conversation you want to analyse...",
+        "urlRequiredMessage": "Please provide the URL of the company/profile where this chat occurred",
         "analyseButton": "Analyse Chat",
         "processingImages": "Processing images...",
         "analysing": "Analysing...",
@@ -163,7 +167,7 @@
         "title": "Repository Analysis",
         "subtitle": "Analyse GitHub repositories and code for suspicious patterns and potential threats",
         "input": "Input",
-        "repoUrl": "Repository URL (optional)",
+        "repoUrl": "Repository URL",
         "repoUrlPlaceholder": "https://github.com/user/repo",
         "zipFile": "Repository ZIP file",
         "analyseButton": "Analyse Repository",
@@ -448,7 +452,10 @@
       "validation": {
         "typeRequired": "El tipo es requerido",
         "urlRequired": "La URL es requerida",
+        "urlRequiredForChat": "La URL es requerida para el análisis de chat",
         "urlInvalid": "Ingresa una URL válida",
+        "titleOrUrlRequired": "Se requiere título o URL",
+        "titleRequiredForChat": "El título es requerido para análisis de chat",
         "reasonRequired": "La razón es requerida",
         "contactRequired": "Se requiere email o LinkedIn",
         "submissionFailed": "El envío falló. Intenta de nuevo."
@@ -470,9 +477,10 @@
         "title": "Análisis de Chat",
         "subtitle": "Analiza conversaciones de chat, mensajes o contenido de texto en busca de patrones sospechosos",
         "input": "Entrada",
-        "screenshots": "Capturas de pantalla (opcional)",
+        "screenshots": "Capturas de pantalla",
         "chatText": "Texto del chat",
         "chatTextPlaceholder": "Pegá aquí el texto del chat o conversación que querés analizar...",
+        "urlRequiredMessage": "Por favor, proporciona la URL de la empresa/perfil donde ocurrió este chat",
         "analyseButton": "Analizar Chat",
         "processingImages": "Procesando imágenes...",
         "analysing": "Analizando...",
@@ -483,7 +491,7 @@
         "title": "Análisis de Repositorio",
         "subtitle": "Analiza repositorios de GitHub y código en busca de patrones sospechosos y amenazas potenciales",
         "input": "Entrada",
-        "repoUrl": "URL del Repositorio (opcional)",
+        "repoUrl": "URL del Repositorio",
         "repoUrlPlaceholder": "https://github.com/user/repo",
         "zipFile": "Archivo ZIP del Repositorio",
         "analyseButton": "Analizar Repositorio",
